# test-task-AuroraOs

./: .gitignore  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  InputValidator.cpp  README.md  SharingFramework.cpp  SharingFramework.h  Validator.h  main.cpp
application/: CMakeLists.txt  formats.conf  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
demo_applications/DocHandler/: DocHandler  formats.conf
demo_applications/TextHandler/: TextHandler  formats.conf
demo_applications/VideoHandler/: VideoHandler  formats.conf
src/: .gitignore  CMakeLists.txt  ConfigManager.cpp  InputValidator.cpp  README.md  ServiceException.h  SharingFramework.cpp  SharingFramework.h
